# detour

./: .gitignore  Dockerfile  README.md  build.sh  config.json  pyproject.toml  requirements.txt  run-client.sh  run-server.sh  run-sslocal.sh  run-ssserver.sh
detour/: config.py  logger.py  relay.py  schema.py  utils.py
detour/client/: __init__.py  __main__.py  client.py  shadow.py  socks5.py
detour/server/: __main__.py  handlers.py  server.py
shadowsocks/: common.py  lru_cache.py  manager.py  shell.py
